Revision history for Perl extension Parallel::Forker

The contributors that suggested a given feature are shown in [].

* Parallel::Forker 1.231 2010/07/01

****	Fix rsh test failure.

****	Use Test::More to simplify test failure debugging.

* Parallel::Forker 1.230 2010/06/16

**	Add reap_processes and reap to reclaim memory. [by Muir Manders]

***	Fix memory leak. [by Muir Manders]

****	Fix Pod::Usage dependency, rt51024. [Andreas Koenig]

* Parallel::Forker 1.225 2010/01/12

****	Documentation updates.

* Parallel::Forker 1.224 2009/05/19

**	This package is now licensed under LGPL v3 and/or Artistic v2.0.

****	Fix ignore files to support GIT.

* Parallel::Forker 1.223 2008/11/14

***	Add in_parent method and recommend usage, rt40886. [Ton Voon]

* Parallel::Forker 1.222 2008/1/29

***	Run processes in sorted rather than hash order. [Bryce Denney]

****	Reorganize kit to use lib directory, for easier standalone use.

* Parallel::Forker 1.221 2007/6/12

***	Warn, but allow users to set SIG{CHLD}='IGNORE'. [Kevin Montuori]

****    Warn if use_sig_child is undefined, as need to know if on or off.

****	Report error if create or schedule a task, and the same name exists.

****	Documentation cleanups. [Bryce Denney]

* Parallel::Forker 1.220 2007/2/2

****	Add use_sig_child method, and accelerate poll.  [Darrell Bishop]

* Parallel::Forker 1.214 2007/2/1

****    Fix hang in applications that call poll without sig_child.
	This broke in 1.212 and 1.213. [Venkataramana Mokkapati]

* Parallel::Forker 1.213 2007/1/28

****    Internal refactoring of poll and wait_all routines.

****    Documentation cleanups. [Darrell Bishop]

* Parallel::Forker 1.212 2007/1/23

****    Extend poll() to allow multiple processes to complete. [Darrell Bishop]
	This means poll() has no return value; the old return was undocumented.

* Parallel::Forker 1.211 2006/10/03

****    Fix kill_tree causing _subprocesses error message

* Parallel::Forker 1.210 2006/05/19
