@@ -1,25 +1,17 @@
 --- #YAML:1.0
-name:               Parallel-Forker
-version:            1.231
-abstract:           Parallel job forking and management, with expression based control
-author:
+name:                Parallel-Forker
+version:             1.232
+abstract:            Parallel job forking and management, with expression based control
+license:             ~
+author:              
     - Wilson Snyder <wsnyder@wsnyder.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
-build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Proc::ProcessTable:  0.4
-    Scalar::Util:        0
-    Test::More:          0
-    Time::HiRes:         0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
+    Proc::ProcessTable:            0.4
+    Scalar::Util:                  0
+    Test::More:                    0
+    Time::HiRes:                   0
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
